Added user auth
Added user auth as a authenticated user will be able to see more details than a user who is not logged in.
